--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,42 @@
 body{
   font-family: "Montserrat";
+  text-align: center;
 }
 
-h1{
+h1, h2, h3, h4, h5, h6 {
   font-family: "Montserrat";
-  font-size: 3.5rem;
-  line-height: 1.5;
-  font-weight: 900;
-}
-
-h2{
-  font-family: "Montserrat";
-  line-height: 1.5;
-  font-weight: 700;
-  font-size: 3rem;
-
-}
-
-h3{
-  font-family: "Montserrat";
-  font-size: 1.5rem;
-  font-weight: 700;
 }
 
 p{
   color: #8f8f8f;
 }
 
-/* Title Section */
-#title{
+/* Headings */
+.big-heading{
+  font-family: "Montserrat";
+  font-size: 3.5rem;
+  line-height: 1.5;
+  font-weight: 900;
+}
+
+.section-heading{
+  line-height: 1.5;
+  font-weight: 700;
+  font-size: 3rem;
+}
+/* Containers */
+.container-fluid{
+  padding: 7% 15%;
+}
+
+/*Sections*/
+.colored-section{
   background-color: #ff4c68;
   color: #fff;
 }
 
-.container-fluid{
-  padding: 3% 15% 7%;
+.white-section{
+  background-color: #fff;
 }
 
 /* Navigation Bar */
@@ -59,6 +61,12 @@ p{
   font-weight: 300;
 }
 
+/* Title Section */
+#title .container-fluid {
+  padding: 3% 15% 7%;
+  text-align: left;
+}
+
 /* Download Buttons */
 .download-button{
   margin: 5% 3% 5% 0%;
@@ -66,8 +74,6 @@ p{
 
 /* Title Image */
 #features{
-  padding: 7% 15%;
-  background-color: #fff;
   position: relative;
 }
 
@@ -80,8 +86,12 @@ p{
 
 /* Feature Section */
 .feature-box{
-  text-align: center;
   padding: 3%;
+}
+
+.feature-title{
+  font-size: 1.5rem;
+  font-weight: 700;
 }
 
 /* Icons */
@@ -91,14 +101,12 @@ p{
 }
 
 .feature-icon:hover{
-color: #ff4c68;
+  color: #ff4c68;
 }
 
 /* Testemonial Section */
 #testimonials{
-  text-align: center;
   background-color: #ef8172;
-  color: #fff;
 }
 
 .testimonial-image{
@@ -107,14 +115,15 @@ color: #ff4c68;
   margin: 20px;
 }
 
-.carousel-item{
-  padding: 7% 15%;
+.testimonial-text{
+  line-height: 1.5;
+  font-weight: 700;
+  font-size: 3rem;
 }
 
 /* Press Section */
 #press{
   background-color: #ef8172;
-  text-align: center;
   padding-bottom: 3%;
 }
 
@@ -126,7 +135,6 @@ color: #ff4c68;
 /*Pricing Section*/
 #pricing{
   padding: 100px;
-  text-align: center;
 }
 
 .pricing-column{
@@ -137,28 +145,13 @@ color: #ff4c68;
   line-height: 2;
 }
 
-/* Call to Action Section*/
-#cta{
-  text-align: center;
-  background-color: #ff4c68;
-  padding:7% 15%;
-}
-
-.cta-text{
-  font-family: "Montserrat";
-  font-size: 3.5rem;
+.price-text{
   line-height: 1.5;
   font-weight: 700;
-  color: #fff;
-  margin-bottom: 50px;
+  font-size: 3rem;
 }
 
 /*Footer Section*/
-#footer{
-  padding: 7% 15%;
-  text-align: center;
-}
-
 .footer-icons{
   padding-left: 20px;
 }
@@ -169,12 +162,12 @@ color: #ff4c68;
 
 /* Responsive Design */
 @media (max-width: 1028px){
-  #title{
+  #title .container-fluid{
     text-align: center;
   }
   .title-image{
     position: static;
     transform: rotate(0deg);
-    width: 40%;
+    width: 50%;
   }
 }
